# HyperFL

./: README.md  requirements.txt  setup.cfg
cnn/: data_loader.py  federated_main.py  options.py  running.py  tools.py
cnn/methods/: __init__.py  centaur.py  dp_fedavg.py  fedavg.py  hyperfl.py  ppsgd.py
cnn/models/: cnn.py
resnet/: data_loader.py  federated_main.py  options.py
resnet/methods/: hyperfl_lpm.py
resnet/models/: models_resnet.py  resnet.py
vit/: data_loader.py  federated_main.py  options.py  running.py
vit/methods/: __init__.py  local.py
vit/models/: models_vit.py  vit.py
