[metadata]
name = HyperFL
version = 0.0.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.24.3
    torch>=2.0.1
    torchaudio>=2.0.2
    torchvision>=0.15.2
    scipy>=1.10.1
    timm>=0.9.2
    cvxpy>=1.3.2
